# csh

./: Cargo.toml  Makefile.toml  README.md
assets/: NOTICES.md
assets/items/: item1.item.ron  item2.item.ron
assets/workbenches/: classical.workbench.ron
src/: args.rs  asset_macro.rs  asset_ref.rs  debugging.rs  lazy_eq.rs  main.rs  spring.rs  utils.rs
src/plugins/: assets.rs  camera.rs  chest.rs  crafting.rs  cursor.rs  environment.rs  mod.rs  network.rs  player.rs
src/plugins/crafting/: macros.rs  mod.rs  systems.rs
src/plugins/crafting/logic/: inventory.rs  item.rs  layout.rs  mod.rs  workbenches.rs
src/plugins/enemy/: mod.rs
