[package]
name = "csh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.13.0", features = ["serialize"] }
paste = "1.0.14"
ndarray = "0.15.6"
clap = { version = "4.4", features = ["derive"] }
serde = "1.0"

bevy_xpbd_2d = "0.4.2"
bevy_mod_picking = { version = "0.18.1", features = ["backend_egui"] }
bevy_asset_loader = { version = "0.20.0", features = ["2d"] }
bevy-inspector-egui = "0.23.4"
bytemuck = "1.14.1"
bevy_replicon = "0.24.1"
bevy_replicon_renet = "0.1"
bevy_common_assets = { version = "0.10.0", features = ["ron"], default-features = false }
ron = "0.8.1"

[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
